# Event-Management

./: README.md
react-frontend/: .env  README.md  index.html  package-lock.json  package.json  vite.config.js
react-frontend/src/: App.css  App.jsx  index.css  main.jsx
react-frontend/src/API/: axiosInstance.js
react-frontend/src/Components/: Sidebar.css  Sidebar.jsx
react-frontend/src/Components/CalendarHeatmap/: CalendarHeatmap.css  CalendarHeatmap.jsx
react-frontend/src/ContextAPI/: AuthProvider.jsx
react-frontend/src/Pages/: Dashboard.jsx  Home.jsx  Login.jsx
react-frontend/src/Routes/: PrivateRoute.jsx  PublicRoutes.jsx
react-frontend/src/Utils/: downloadCSV.js  exportPDF.js  getSystemTheme.js
rust-server/: .env  Cargo.toml  README.md  database.db
rust-server/src/: main.rs
rust-server/src/agenda/: mapper.rs  models.rs
rust-server/src/analytics/: mapper.rs  models.rs  routes.rs
rust-server/src/attachment/: mapper.rs  models.rs
rust-server/src/attendee/: mapper.rs  models.rs  routes.rs
rust-server/src/auth/: mapper.rs  mod.rs  models.rs  routes.rs  services.rs  token.rs
rust-server/src/category/: mapper.rs  mod.rs  models.rs  routes.rs
rust-server/src/comment/: mapper.rs  mod.rs  models.rs
rust-server/src/event/: mapper.rs  mod.rs  models.rs  routes.rs
rust-server/src/faq/: mapper.rs  models.rs
rust-server/src/organizer/: mapper.rs  models.rs  routes.rs
rust-server/src/overview/: mapper.rs  mod.rs  models.rs  routes.rs
rust-server/src/routes/: auth_routes.rs
rust-server/src/speaker/: mapper.rs  models.rs
(+30 files in other folders)
